# cpyte-engine

./: .gitignore  Cargo.toml  README.md  pyproject.toml
data/3d-models/: bochka.mtl  viking_room.mtl
shaders/src/: compile_shaders.sh  main.frag  main.vert
src/: buffer.rs  command_buffer.rs  command_executor.rs  command_pool.rs  debug_messenger.rs  descriptor_pool.rs  descriptor_set.rs  device.rs  entity.rs  entry.rs  fence.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  main.rs  memory.rs  model.rs  physical_device.rs  pipeline.rs  queue.rs  queue_family_index.rs  render_pass.rs  renderer.rs  sampler.rs  scene_graph.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs  texture.rs  ubo.rs  validation_layers.rs  vertex.rs  window.rs
