[package]
name = "cpyte-engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cpyte_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
vulkanalia = { version = "0.15.0", features = ["libloading", "window"] }
anyhow = "1.0.58"
lazy_static = "1.4.0"
image = "0.24.2"
pretty_env_logger = "0.4.0"
thiserror = "1.0.31"
winit = "0.26.1"
log = "0.4.17"
itertools = "0.9.0"
collada = "0.14.0"
fbxcel-dom = "0.0.9"
gltf = "1.0.0"
tobj = "3.2.3"
hashbrown = "0.12.3"
rand = "0.8.5"
memoffset = "0.8.0"
nalgebra = "0.32.2"
numpy = { version = "0.18.0", features = ["nalgebra"] }